update requirements, remove fixed with in style sheet, move info button to front of row, truncate file names if too long in file list

--- a/trunk/s/style.css
+++ b/trunk/s/style.css
@@ -6,7 +6,6 @@ body {
 #header {
 	color: #fff;
 	margin: 20px auto 0 auto;
-	width: 80%;
 	background-color: #000;
 	padding: 10px;
 	border-radius: 10px 10px 0 0;
@@ -42,7 +41,6 @@ body {
 
 #content {
 	margin: 0 auto;
-	width: 80%;
 	background-color: #fff;
         padding: 10px;
         border: 1px solid #000;
@@ -56,7 +54,6 @@ body {
 
 #nav {
         margin: 0 auto;
-        width: 80%;
         background-color: #888;
         padding: 10px;
 	border-left: 1px solid #000;
@@ -87,7 +84,6 @@ body {
 	margin: 20px auto;
 	font-size: small;
 	color: #888;
-	width: 80%;
 	text-align: center;
 }
 
